# optipass

./: .gitignore  README.md  design-qa.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.codex/environments/: environment.toml
.codex/skills/angular-coding-standards/: SKILL.md
.codex/skills/optipass-dev-process/: SKILL.md
.codex/skills/release-cicd/: SKILL.md
.github/workflows/: release-tauri.yml
apps/api/: package.json  pnpm-lock.yaml
apps/api/src/: action-execution-service.test.ts  action-execution-service.ts  app.test.ts  app.ts  application-services.ts  config.test.ts  config.ts  csv-backend.ts  (+16 more)
apps/optipass/: README.md  angular.json  package.json
apps/tauri/: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tauri.conf.json
apps/tauri/capabilities/: default.json
apps/tauri/icons/: icon.icns
apps/tauri/scripts/: prepare-api-resource.sh  prepare-bun-runtime.sh
apps/tauri/src/: backend.rs  lib.rs  main.rs
apps/web/: angular.json  package.json  pnpm-lock.yaml  proxy.conf.json
archived/web/: tsconfig.app.json  tsconfig.json
design/: launch.css  workspace.css
docs/: 1password-test-vault-import.csv  bppleman.xml  canonical-item-store.md  duplicate-semantics.md  global-search.md  local-app-runtime.md  similarity-detection.md
mvp-demo/: Optipass.dc.html  PlanAction Playground.dc.html  Toasts.dc.html  Vault Icons.dc.html
mvp-demo/tauri-app/: angular.json  package.json
scripts/: check-no-union-types.mjs  dom-style-to-figma.mjs  figma-crawl-inspect.mjs  figma-fidelity.mjs  figma-image-diff.mjs  smoke-mock.mjs
(+141 files in other folders)
