[package]
name = "optipass"
version = "0.1.0"
description = "Optipass desktop app"
authors = ["bppleman"]
edition = "2021"

[lib]
name = "optipass_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
